# rowan-baja-daq

./: README.md
accelerometer-board/: README.md  accelerometer-board.kicad_pcb  accelerometer-board.kicad_pro  accelerometer-board.kicad_sch  fp-lib-table  sym-lib-table
accelerometer-board/lib/FXMA2102L8X/: 2025-11-18_18-54-17.kicad_sym
accelerometer-board/lib/FXMA2102L8X/footprints.pretty/: MICROPAK8_1P6X1P6_ONS-L.kicad_mod  MICROPAK8_1P6X1P6_ONS-M.kicad_mod  MICROPAK8_1P6X1P6_ONS.kicad_mod
accelerometer-board/pcb/: accelerometer-board.kicad_pcb  accelerometer-board.kicad_sch  fp-lib-table
can-module/: .gitignore  README.md  can-module.kicad_pcb  can-module.kicad_pro  can-module.kicad_sch  fp-info-cache  fp-lib-table  gpio_resistors.kicad_sch  sym-lib-table
can-module/cad/: can-module.FCStd  can-module.step
can-module/lib/ATA6560-GBQW-N/: 2025-10-02_15-15-26.kicad_sym
can-module/lib/ATA6560-GBQW-N/footprints.pretty/: VDFN8_3X3_MCH-L.kicad_mod  VDFN8_3X3_MCH.kicad_mod
can-module/lib/Conn_01x04/Conn01x04.pretty/: 01x04_1mm.kicad_mod
can-module/lib/Conn_01x08/Conn_01x08.pretty/: Untitled.kicad_mod
can-module/lib/PIC32CM1216JH01048-I_U5B/: QFN50P700X700X90-49N-D.kicad_mod
can-module/lib/SolderJumperSmall/SolderJumperSmall.pretty/: Jumper3Small.kicad_mod
can-module/pcb/: README.md  can-module.kibot.yaml  can-module.kicad_pcb  can-module.kicad_pro  can-module.kicad_sch  fp-info-cache  fp-lib-table  gpio_resistors.kicad_sch  sym-lib-table
can-module/pcb/lib/ATA6560-GBQW-N/footprints.pretty/: VDFN8_3X3_MCH-M.kicad_mod
can-module/pcb/lib/Logos/: RowanMotorsports.kicad_mod
can-module/pcb/lib/NID5100GWH/: NID5100GWH.kicad_mod  NID5100GWH.kicad_sym
can-module/pcb/lib/PIC32CM1216JH01048-I_U5B/: PIC32CM1216JH01048-I_U5B.kicad_sym
can-module/software/: .gitignore  CMakeLists.txt  Makefile  README.md
can-module/software/cmake/: hal_helpers.cmake  pic32.cmake
can-module/software/hal/: CMakeLists.txt
can-module/software/hal/hal_can/: hal_can_pic32.c
can-module/software/hal/hal_i2c/: hal_i2c.h  hal_i2c_simulation.c
can-module/software/hal/hal_led/: hal_led.h  hal_led_pic32.c
can-module/software/hal/hal_spi/: hal_spi.h  hal_spi_simulation.c
can-module/software/hal/hal_system/: hal_system.h  hal_system_simulation.c
can-module/software/hal/hal_uart/: hal_uart_pic32.c  hal_uart_simulation.c
can-module/software/lib/: CMakeLists.txt
can-module/software/lib/board_led/: CMakeLists.txt  board_led.c
can-module/software/lib/hal_can/: hal_can.h  hal_can_simulation.c
can-module/software/lib/hal_i2c/: hal_i2c_pic32.c
can-module/software/lib/hal_led/: hal_led_simulation.c
can-module/software/lib/hal_spi/: hal_spi_pic32.c
can-module/software/lib/hal_system/: hal_system_pic32.c
can-module/software/lib/hal_uart/: hal_uart.h
can-module/software/lib/test_lib/: CMakeLists.txt  test_lib.c  test_lib.h
can-module/software/src/: CMakeLists.txt  main2.c
can-module/software/targets/: CMakeLists.txt
can-module/software/targets/blinky/: CMakeLists.txt  main.c
can-module/software/targets/can-test/: CMakeLists.txt  main.c
can-module/software/targets/i2c-test/: CMakeLists.txt  main.c
can-module/software/targets/spi-test/: CMakeLists.txt  main.c
can-module/software/targets/test_target/: CMakeLists.txt  main.c
can-module/software/targets/test_target1/: CMakeLists.txt  main.c
can-module/software/targets/test_target2/: CMakeLists.txt  main.c
can-module/software/targets/uart-test/: CMakeLists.txt  main.c
can-module/software/tests/: CMakeLists.txt
can-module/software/tests/lib/: test_test_lib.c
comm-unit/: README.md  comm-unit.kicad_pcb  comm-unit.kicad_pro  comm-unit.kicad_sch-bak  fp-lib-table
comm-unit/lib/TXS0108ERGYR/: IC_TXS0108ERGYR.kicad_mod
comm-unit/pcb/: comm-unit.kicad_pcb  comm-unit.kicad_pro  comm-unit.kicad_sch  sym-lib-table
comm-unit/pcb/lib/TXS0108ERGYR/: TXS0108ERGYR.kicad_sym
comm-unit/pcb/lib/Wio-SX1262/: Wio-SX1262 PCB Package.kicad_mod  Wio-SX1262 Schematic Package.kicad_sym
head-unit/: .gitignore
head-unit/pcb/: head-unit.kicad_pro  head-unit.kicad_sch
level-shifter/: level-shifter.kicad_sch
main_unit/hardware/: .gitignore  canbus.kicad_sch  display.kicad_sch  fp-lib-table  main_unit.kicad_pcb  main_unit.kicad_pro  main_unit.kicad_sch  power.kicad_sch  sdram.kicad_sch  sym-lib-table  untitled.kicad_sch
main_unit/hardware/lib/62684-402100ALF/: 62684-402100ALF.kicad_sym  AMPHENOL_62684-402100ALF.kicad_mod  s62684-402100alf.stp
main_unit/hardware/lib/691137710002/: 691137710002.kicad_mod
main_unit/hardware/lib/865080342006/: WCAP-ASLI_5X5.5_DXL_.kicad_mod
main_unit/hardware/lib/FTSH-107-01-L-DV-K-A/: FTSH-107-01-L-DV-K-A.step  SAMTEC_FTSH-107-01-L-DV-K-A.kicad_mod
main_unit/hardware/lib/LD39200PU33R/: SON95P300X300X100-7N.kicad_mod
main_unit/hardware/lib/MAX25512ATG_V_T/: 2025-09-19_18-33-36.kicad_sym  21-0139_T24444C_MXM.step
main_unit/hardware/lib/NRS4018T220MDGJ/: IND_TAIYO_NRS4018_TAY.kicad_mod  IND_TAIYO_NRS4018_TAY.step
main_unit/hardware/lib/W9864G6KH-6/: SOP80P1176X120-54N.kicad_mod  W9864G6KH-6.kicad_sym
main_unit/software/: README.md
pmod-adapter/: .gitignore  README.md  pmod-adapter.kicad_pcb  pmod-adapter.kicad_pro  pmod-adapter.kicad_sch
pmod-adapter/pcb/: pmod-adapter.kicad_pro  pmod-adapter.kicad_sch
power-can-tap/: .gitignore  fp-info-cache  fp-lib-table  power-can-tap.kicad_pcb  power-can-tap.kicad_pro  power-can-tap.kicad_sch
sd-card-board/: .gitignore  README.md  fp-lib-table  sd-card-board.kicad_pcb  sd-card-board.kicad_pro  sd-card-board.kicad_sch
sd-card-board/lib/1051620001/: 2025-11-13_15-29-59.kicad_sym
sd-card-board/lib/FXMAR2104UMX/: 2025-11-13_15-37-18.kicad_sym
sd-card-board/lib/FXMAR2104UMX/footprints.pretty/: ULTRATHIN_MLP_12L_ONS-L.kicad_mod  ULTRATHIN_MLP_12L_ONS-M.kicad_mod
sd-card-board/lib/MEM2067-02-180-00-A/: GCT_MEM2067-02-180-00-A_REVB.kicad_mod  MEM2067-02-180-00-A_REVB.kicad_sym
sd-card-board/pcb/: fp-lib-table  sd-card-board.kicad_pcb  sd-card-board.kicad_pro  sd-card-board.kicad_sch  sym-lib-table
(+10 files in other folders)
